fix project name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "catbug.js",
+  "name": "catbug",
   "version": "0.1.2",
   "description": "everything is okay",
   "homepage": "http://github.com/pozadi/catbug",
