--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "catbug",
-  "version": "0.1.0",
+  "version": "0.1.3",
   "main": "catbug.js",
   "ignore": [
     "**/.*",
@@ -8,8 +8,8 @@
     "components"
   ],
   "dependencies": {
-    "jquery": "~1.9.0",
-    "underscore": "~1.4.4"
+    "jquery": ">=1.7.0",
+    "underscore": ">=1.4.4"
   },
   "devDependencies": {}
 }
