--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
   "devDependencies": {
     "grunt": "~0.4.1",
     "grunt-contrib-watch": "~0.4.3",
-    "grunt-contrib-clean": "~0.4.1",
-    "grunt-mincer": "~0.3.1",
+    "grunt-contrib-clean": "~0.5.0",
     "coffee-script": "~1.6.2",
     "grunt-contrib-uglify": "~0.2.0",
-    "grunt-contrib-concat": "~0.3.0"
+    "grunt-contrib-concat": "~0.3.0",
+    "grunt-template": "~0.2.0",
+    "grunt-contrib-coffee": "~0.7.0",
+    "grunt-contrib-copy": "~0.4.1"
   }
 }
